scroll wheel works, but fixing overflow-x and bottom margin of appbody

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 body, html {
   height: 100%;
   margin: 0;
+  overflow-x: hidden;
   font-family: 'Poppins', sans-serif;
   background: var(--background-color);
   color: var(--text-color);
@@ -58,7 +59,7 @@ body, html {
   margin-bottom: calc(var(--input-container-height) + env(safe-area-inset-bottom));
   overflow-y: auto; /* Enable scrolling */
   padding: 1rem;
-  padding-bottom: 100px; /* Increase bottom padding to ensure space for scrolling */
+  padding-bottom: 70px; /* Increase bottom padding to ensure space for scrolling */
   display: flex;
   flex-direction: column;
   scrollbar-width: thin;
